terraform/networking/nat.tf
# Elastic IP for NAT Gateway
resource "aws_eip" "nat_eip" {

  domain = "vpc"

  depends_on = [
    aws_internet_gateway.igw
  ]

  tags = {
    Name = "student-nat-eip"
  }

}

# NAT Gateway
resource "aws_nat_gateway" "nat" {

  allocation_id = aws_eip.nat_eip.id

  subnet_id = aws_subnet.public[0].id

  tags = {
    Name = "student-nat-gateway"
  }

  depends_on = [
    aws_internet_gateway.igw
  ]

}
