terraform/networking/routes.tf
##############################
# Public Route Table
##############################

resource "aws_route_table" "public" {

  vpc_id = aws_vpc.main.id

  route {

    cidr_block = "0.0.0.0/0"

    gateway_id = aws_internet_gateway.igw.id

  }

  tags = {

    Name = "student-public-route-table"

  }

}

##############################
# Private Route Table
##############################

resource "aws_route_table" "private" {

  vpc_id = aws_vpc.main.id

  route {

    cidr_block = "0.0.0.0/0"

    nat_gateway_id = aws_nat_gateway.nat.id

  }

  tags = {

    Name = "student-private-route-table"

  }

}

##############################
# Public Route Table Association
##############################

resource "aws_route_table_association" "public" {

  count = 3

  subnet_id = aws_subnet.public[count.index].id

  route_table_id = aws_route_table.public.id

}

##############################
# Private Route Table Association
##############################

resource "aws_route_table_association" "private" {

  count = 3

  subnet_id = aws_subnet.private[count.index].id

  route_table_id = aws_route_table.private.id

}
